--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -7,21 +7,21 @@
 
 % Use the wording given in the official list of degrees awarded by UCI:
 % http://www.rgs.uci.edu/grad/academic/degrees_offered.htm
-\degreefield{Computer Science}
+\degreefield{Physics \& Astronomy}
 
 % Your name as it appears on official UCI records.
-\authorname{Your name}
+\authorname{Bela Abolfathi}
 
 % Use the full name of each committee member and full title 
 % (e.g. Professor/Associate Professor).
-\committeechair{Professor A}
+\committeechair{Professor David P. Kirkby}
 \othercommitteemembers
 {
-  Assistant Professor B\\
-  Associate Professor C
+  Associate Professor Simona Murgia\\
+  Professor Mu-Chun Chen
 }
 
-\degreeyear{2012}
+\degreeyear{2021}
 
 \copyrightdeclaration
 {
@@ -92,48 +92,61 @@
 \textbf{EDUCATION}
   
   \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}lr}
-    \textbf{Doctor of Philosophy in Computer Science} & \textbf{2012} \\
+    \textbf{Doctor of Philosophy in Physics \& Astronomy} & \textbf{2021} \\
     \vspace{6pt}
-    University name & \emph{City, State} \\
-    \textbf{Bachelor of Science in Computational Sciences} & \textbf{2007} \\
+    University of California, Irvine & \emph{Irvine, CA} \\
+    \textbf{Master of Science in Physics \& Astronomy} & \textbf{2016} \\
     \vspace{6pt}
-    Another university name & \emph{City, State} \\
+    University of California, Irvine & \emph{Irvine, CA} \\
+    \textbf{Bachelor of Arts in Physics} & \textbf{2011} \\
+    \vspace{6pt}
+    Reed College & \emph{Portland, OR} \\
   \end{tabular*}
 
 \vspace{12pt}
 \textbf{RESEARCH EXPERIENCE}
 
   \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}lr}
-    \textbf{Graduate Research Assistant} & \textbf{2007--2012} \\
+    \textbf{Graduate Student Researcher} & \textbf{2014-2021} \\
     \vspace{6pt}
     University of California, Irvine & \emph{Irvine, California} \\
+    \textbf{Graduate Student Researcher} & \textbf{2018} \\
+    \vspace{6pt}
+    SLAC National Accelerator Laboratory & \emph{Menlo Park, CA} \\
+    \textbf{REU Student} & \textbf{Summer 2010} \\
+    \vspace{6pt}
+    Cornell University & \emph{Ithaca, New York} \\
   \end{tabular*}
 
 \vspace{12pt}
 \textbf{TEACHING EXPERIENCE}
 
   \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}lr}
-    \textbf{Teaching Assistant} & \textbf{2009--2010} \\
+    \textbf{Teaching Assistant} & \textbf{2014--2016} \\
     \vspace{6pt}
-    University name & \emph{City, State} \\
+    University of California, Irvine & \emph{Irvine, California} \\
   \end{tabular*}
 
 \pagebreak
 
 \textbf{REFEREED JOURNAL PUBLICATIONS}
 
-  \mypubentry{Ground-breaking article}{2012}{Journal name}
+  \mypubentry{DC2 Paper}{TBD}{Journal name}
+  \mypubentry{Overview of the DESI Legacy Imaging Surveys}{2018}{Astronomical Journal}
+  \mypubentry{The Fourteenth Data Release of the Sloan Digital Sky Survey}{2018}{Astrophys. J., Suppl}
+  \mypubentry{Sloan Digital Sky Survey IV: Mapping the Milky Way, Nearby Galaxies, and the Distant Universe}{2017}{Astronomical Journal}
+  \mypubentry{Discovery and Follow-up Observations of the Young Type Ia Supernova 2016coj}{2017}{Astrophysical Journal}
 
-\vspace{12pt}
-\textbf{REFEREED CONFERENCE PUBLICATIONS}
+%\vspace{12pt}
+%\textbf{REFEREED CONFERENCE PUBLICATIONS}
 
-  \mypubentry{Awesome paper}{Jun 2011}{Conference name}
-  \mypubentry{Another awesome paper}{Aug 2012}{Conference name}
+  %\mypubentry{Awesome paper}{Jun 2011}{Conference name}
+  %\mypubentry{Another awesome paper}{Aug 2012}{Conference name}
 
 \vspace{12pt}
 \textbf{SOFTWARE}
 
-  \mysoftentry{Magical tool}{http://your.url.here/}
+  \mysoftentry{pz\_bayes}{http://your.url.here/}
   {C++ algorithm that solves TSP in polynomial time.}
 
 }
