First pass at table of contents

--- a/introduction.tex
+++ b/introduction.tex
@@ -51,6 +51,16 @@ reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
 pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
 culpa qui officia deserunt mollit anim id est laborum.
 
+\section{History}
+\section{Dark energy}
+\section{Theoretical framework}
+\section{Stage IV Dark Energy Experiments}
+\subsection{Vera C. Rubin Observatory}
+\subsection{Dark Energy Spectroscopic Instrument}
+\section{Observational probes}
+\subsection{Weak gravitational lensing}
+\subsection{BAO in the Lyman-$\alpha$ forest of high redshift quasars}
+\section{Motivation and results}
 
 %%% Local Variables: ***
 %%% mode: latex ***
