--- a/thesis.tex
+++ b/thesis.tex
@@ -79,7 +79,6 @@
 % numbering goes only to subsections).
 %\setcounter{secnumdepth}{4}
 
-
 % Set this to only select a subset of the includes directives below.
 % Very handy to speed up compilation if you're working on a certain
 % part of your thesis. It conserves page numbers, references, etc.
@@ -93,8 +92,12 @@
 
 % Include the different components of your thesis, in separate files.
 % Using \include allows you to set \includeonly above.
-\include{chapter1}
-%\include{chapter2}
+\include{introduction}
+\include{photoz}
+\include{sensors}
+\include{gmm}
+\include{specsim}
+\include{sv}
 % ... and so on
 
 % These commands fix an odd problem in which the bibliography line
