Initial work on sensor introduction

--- a/introduction.tex
+++ b/introduction.tex
@@ -61,6 +61,8 @@ culpa qui officia deserunt mollit anim id est laborum.
 \subsection{Weak gravitational lensing}
 \subsection{BAO in the Lyman-$\alpha$ forest of high redshift quasars}
 \section{Motivation and results}
+% talk about requirements here (both in terms of image quality and electrical)
+% linearity requirements are motivated by requirements on photometric accuracy
 
 %%% Local Variables: ***
 %%% mode: latex ***
