--- a/thesis.tex
+++ b/thesis.tex
@@ -65,6 +65,10 @@
 \newtheorem{definition}{\textsc{Definition}}[chapter]
 \newtheorem{example}{\textsc{Example}}[chapter]
 
+% My macros
+\newcommand{\pkg}[1]{\texttt{#1}}
+\newcommand\elec{\mathrm{e^-}}
+
 % Macros for title, author, abstract, etc.
 \input{preliminaries}
 
