First edits on bias and offset studies section

--- a/sensors.tex
+++ b/sensors.tex
@@ -34,9 +34,9 @@ The LSST focal plane consists of 189 CCDs arranged on 21 autonomous cameras call
 
 Although construction of the LSST camera is taking place at SLAC, initial testing of the CCDs and raft assembly begins at Brookhaven National Laboratory (BNL). Once the rafts are completed, they are shipped to SLAC where the results of a similar suite of tests are compared to those obtained at BNL for consistency.
 
-Verification of camera components was performed on a number of testing benches located in the Camera Clean Room at SLAC. I specifically analyzed data from an optical testing bench called Test Stand 8 (TS8), which was used to perform acceptance tests on individual rafts. A subset of the LSST Camera system requirements are shown in Table \ref{tab:cam-req}. TS8 used a 300 Watt Xe arc lamp, a monochromator, a 6-position filter wheel, an OAP feed optic, a 300 millimeter integrating sphere and a 1 meter baffled dark box (LSST Integration & Test subsystem Bond) to produce dark images, flat fields, $^{55}$Fe X-ray sources, and multi-spot images to study noise, linearity, gain, cross-talk, dead pixels, as well as other unexpected instrument signatures. These electro-optical performance tests were run using a software package developed at SLAC called \pkg{eotest}.  I used the \pkg{eotest} package to study bias corrections and characterize irregularities in the LSST sensors. Because they were produced by two different vendors, Imaging Technology Laboratory (ITL) and Teledyne e2v (e2v), the CCDs have their own unique signatures due to differences in the manufacturing process. A careful study of sensor effects therefore involved evaluating data from TS8 at the raft, CCD, amplifier and vendor level.
+Verification of camera components was performed on a number of testing benches located in the Camera Clean Room at SLAC. I specifically analyzed data from an optical testing bench called Test Stand 8 (TS8), which was used to perform acceptance tests on individual rafts. A subset of the LSST Camera system requirements are shown in Table \ref{tab:cam-req}. TS8 used a 300 Watt Xe arc lamp, a monochromator, a 6-position filter wheel, an OAP feed optic, a 300 millimeter integrating sphere and a 1 meter baffled dark box (LSST Integration & Test subsystem Bond) to produce dark images, flat fields, $^{55}$Fe X-ray sources, and multi-spot images to study noise, linearity, gain, cross-talk, dead pixels, as well as other unexpected instrument signatures. These electro-optical performance tests were run using a software package developed at SLAC called \pkg{eotest}, which is a set of acquisition and analysis scripts used to test the electro-optical performance of the RTMs.  I used the \pkg{eotest} package to study bias and offset corrections and characterize irregularities in the LSST sensors. Because they were produced by two different vendors, Imaging Technology Laboratory (ITL) and Teledyne e2v (e2v), the CCDs have their own unique signatures due to differences in the manufacturing process. A careful study of sensor effects therefore involved evaluating data from TS8 at the raft, CCD, amplifier and vendor level.
 
- The time I spent at SLAC coincided with the Integration \& Verification Testing phase of the camera construction process, where rafts from BNL were being unpacked from crates and initial verification tests were being performed.
+The time I spent at SLAC coincided with the Integration \& Verification Testing phase of the camera construction process, where rafts from BNL were being unpacked from crates and initial verification tests were being performed. 
 
 % Focal plane requirements
 % source:  (IVT of LSST Camera Roodman)
@@ -57,18 +57,26 @@ Verification of camera components was performed on a number of testing benches l
   Linearity & $<3\%$ & Flat-fields\\
   \hline
 \end{tabular}
-\end{table}\\
+\end{table}\\ 
 
-\section{Bias and offset corrections}
+\section{Bias and offset studies}
+% Need to distinguish between bias and offset
 
-Every CCD image that is taken contains a bulk offset that must be subtracted out prior to analysis. This offset level, or bias, can be thought of as a ``zero-point'', and typically contains around 20,000 counts. It is usually measured from the serial overscan region of a single channel in a CCD. The overscan region does not refer to a physical location on the sensor. Rather, this region contains ‘virtual’ pixels that are the result of continuing the readout process after data from the last physical pixel in the serial register has been recorded. 
+Some of the verification sequences that were taken at TS8, such as flat-fields, darks, and bias images, are used for calibration in order to remove sensor artifacts and thermal noise due to physical processes in the CCD. I specifically focused on studying bias images from TS8, which are zero-second exposures taken with the shutter closed that do not contain any thermally excited or photo-electrons. Bias images are used for offset and bias removal during pre-processing. 
 
+At the end of an exposure, the photo-electrons generated in the bulk silicon go through a capacitor where their combined charge is registered as a voltage. But this analog voltage cannot be measured to perfect accuracy, resulting in a degree of uncertainty when it is translated into digital counts via the analog-to-digital converter. If the signal in a pixel were smaller than the readout noise it could result in that pixel having negative counts. A bias voltage must therefore be applied to the capacitor to ensure that pixels with few or no photo-electrons still register non-negative counts. Every CCD image contains a resulting bulk offset level that must be subtracted prior to any scientific analysis. 
+
+This offset level can be thought of as a ``zero-point'', and typically contains around 20,000 counts. A typical bias image should look flat overall, with an average count per pixel roughly equal to the offset level. One can measure the offset in a bias image from the serial overscan region of a single channel in the CCD. The overscan region does not refer to a physical location on the sensor. Rather, this region contains ‘virtual’ pixels that are the result of continuing the readout process after data from the last physical pixel in the serial register has been recorded. 
+
+I studied bias images to investigate the performance of various methods of offset correction at the raft, sensor and amplifier level. I then integrated two new offset-correction methods into the \pkg{oetest} software package. At the start of my project, the EOTest package had two ways to calculate the offset level. One was to measure the offset as the mean of all the pixels in the serial overscan region, and the other was to fit a low-order polynomial function to the mean per row in the overscan region. I compared these two methods to three other offset-correction methods: calculating the offset as the mean-per-row in the overscan, as a Gaussian process fit and finally as a cubic spline fit to the mean per row in the overscan region. These comparisons can be seen in Fig. []
+
+% Why do we measure bias from bias images and not other image types? **
 % Include image showing CCD architecture and overscan regions
-
+% Include image showing bias results from the Traveler
 % How were bias images obtained? What was a typical sequence?
-This offset correction is done using bias images, which are a zero-second exposures taken with the shutter closed. % what type of noise do we expect to see in a bias image?
+% What type of noise do we expect to see in a bias image?
 
-I first looked at bias images to study the performance of various methods of offset correction at the raft, sensor and amplifier level. I then integrated two new offset-correction methods into the EOTest software package, which is a set of acquisition and analysis scripts used to test the electro-optical performance of the Raft Tower Modules (RTMs). A bias image is a zero-second exposure taken with the shutter closed, so it should contain nothing - no light and no dark current - except for the bulk offset level. At the start of my project, the EOTest package had two ways to calculate the offset level. One was to measure the offset as the mean of all the pixels in the serial overscan region, and the other was to fit a low-order polynomial function to the mean per row in the overscan region. I compared these two methods to three other offset-correction methods: calculating the offset as the mean-per-row in the overscan, as a Gaussian process fit and finally as a cubic spline fit to the mean per row in the overscan region. These comparisons can be seen in Fig. []
+ 
 
 While the row-by-row correction did the best at characterizing variations in the offset level, it introduced correlated noise of around 10/sqrt(50) ~ 1.4 counts per pixel. The cubic spline fit generally did well at fitting the shape of the mean-per-row without adding a significant amount of extra noise. However its performance varied depending on the sensor vendor (it tended to perform better on e2v sensors), as well as on how well the parameters of the spline fit were adjusted. For example, in some cases, a cubic spline would tend to overfit the data for certain amplifiers, but when the smoothing factor was increased it would come at the cost of losing peaks or dips in the mean-per-row, particularly in the first 50 or so rows. I tried modeling the offset as a gaussian process to see if it would lead to an improvement, but it actually performed worse at fitting the mean-per-row than the cubic spline did. 
 
